# SurrealDB-ORM

./: .env.example  .gitignore  CHANGELOG  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  publish.yml  surrealdb-security.yml  surrealdb-v2-security.yml  tag-release.yml
devops/: docker-compose.yml  setup-test-db.sh  wait-for-healthy.sh
docs/: auth.md  migrations.md  orm.md  roadmap.md  sdk.md
examples/: 00_setup.ipynb  01_models_crud.ipynb  02_queries_filters.ipynb  03_aggregations.ipynb  04_relations_graph.ipynb  05_transactions_bulk.ipynb  06_signals.ipynb  07_auth.ipynb  08_computed_functions.ipynb  09_advanced_queries.ipynb  10_search_vectors.ipynb  11_geospatial.ipynb  12_realtime.ipynb  13_migrations_schema.ipynb  14_testing_debug.ipynb  15_surrealdb3_features.ipynb  16_upsert_bearer_graphql.ipynb  basic.ipynb  basic.py
src/: __init__.py
src/surreal_orm/: __init__.py  aggregations.py  cache.py  connection_config.py  connection_manager.py  constants.py  debug.py  geo.py  introspection.py  live.py  modelBase.py  model_base.py  prefetch.py  q.py  querySet.py  query_set.py  relations.py  search.py  signals.py  subquery.py  surreal_function.py  surreal_ql.py  types.py  utils.py
src/surreal_orm/auth/: __init__.py  access.py  mixins.py  result.py
src/surreal_orm/cli/: __init__.py  commands.py
src/surreal_orm/fields/: __init__.py  computed.py  encrypted.py  geometry.py  references.py  relation.py  vector.py
src/surreal_orm/migrations/: __init__.py  db_introspector.py  define_parser.py  executor.py  generator.py  introspector.py  migration.py  model_generator.py  operations.py  state.py
src/surreal_orm/testing/: __init__.py  factories.py  fixtures.py
src/surreal_sdk/: README.md  __init__.py  exceptions.py  functions.py  pyproject.toml  transaction.py  types.py
src/surreal_sdk/connection/: __init__.py  base.py  http.py  pool.py  websocket.py
src/surreal_sdk/protocol/: __init__.py  cbor.py  rpc.py
src/surreal_sdk/streaming/: __init__.py  change_feed.py  live_query.py  live_select.py
tests/: conftest.py  test_aggregations.py  test_aggregations_integration.py  test_auth_integration.py  test_auth_unit.py  test_basic.py  test_bugfix_0_5_2.py  test_bugfix_0_5_3.py  test_bugfix_0_5_3_1.py  test_bugfixes_0_5_5_1.py  test_bulk_operations.py  test_bulk_operations_integration.py  test_cache.py  test_cli.py  test_computed_integration.py  test_computed_unit.py  test_db_introspector_unit.py  test_debug.py  test_define_parser.py  test_e2e.py  test_encrypted_field.py  test_events.py  test_features_0_14_4.py  test_features_0_5_4.py  test_features_0_5_5.py  test_fixes_0_14_2.py  test_geo.py  test_index_operations.py  test_introspection_integration.py  test_issue_55.py  test_issue_55_unit.py  test_live.py  test_live_integration.py  test_live_select.py  test_manager.py  test_materialized_views.py  test_migration_class.py  test_migrations_generator.py  test_migrations_integration.py  test_migrations_introspector.py  (+29 more)
tests/sdk/: __init__.py  test_cbor_protocol.py  test_functions.py  test_http_connection.py  test_protocol.py  test_sdk_integration.py  test_streaming.py  test_transactions.py  test_websocket_connection.py
