[project]
name = "surrealdb-orm"
version = "0.14.0"
description = "SurrealDB ORM as 'DJango style' for Python with async support. Works with pydantic validation."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Yannick Croteau", email = "croteau.yannick@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.10.5",
    # SDK dependencies (bundled until surreal-sdk is published to PyPI)
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # CBOR is required for proper binary protocol support
    # (fixes data:xxx strings being interpreted as record links)
    "cbor2>=5.6.0",
]

[project.optional-dependencies]
# CLI support
cli = [
    "click>=8.1.0",
]
# Full installation with all extras
all = [
    "click>=8.1.0",
]

[project.scripts]
surreal-orm = "surreal_orm.cli.commands:main"

[project.urls]
Homepage = "https://github.com/EulogySnowfall/SurrealDB-ORM"
Documentation = "https://github.com/EulogySnowfall/SurrealDB-ORM"
Repository = "https://github.com/EulogySnowfall/SurrealDB-ORM.git"
Issues = "https://github.com/EulogySnowfall/SurrealDB-ORM/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 128
target-version = "py312"
exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",     # line length handled by formatter
    "B904",     # raise from err — too many pre-existing violations to fix at once
    "RUF012",   # mutable class attributes — too noisy for ORM/SDK class pattern
    "RUF022",   # __all__ not sorted — intentionally grouped by category
    "SIM102",   # nested if — style preference, not a bug
    "SIM103",   # return condition directly — style preference
    "SIM105",   # contextlib.suppress — style preference
    "SIM108",   # ternary operator — style preference
    "SIM117",   # combined with statements — style preference
    "SIM910",   # dict.get default — style preference
    "UP042",    # StrEnum — changing inheritance is a behaviour change
    "UP046",    # Generic[T] → type params — breaks Pydantic Generic compat
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "B018", "S101", "RUF015", "RUF043", "RUF059", "UP045"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = "^(tests|examples)/"
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "httpx.*", "click.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src.surreal_orm --cov=src.surreal_sdk --cov-branch --cov-report=xml --cov-report=html --cov-report=term-missing --cov-fail-under=30 --cov-context=test"
markers = [
    "integration: marks tests as integration tests (require running SurrealDB)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
# log_cli = true

[tool.pyright]
include = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pydantic>=2.10.4",
    "docker>=7.1.0",
    "python-dotenv>=1.0.1",
]
lint = [
    "ruff>=0.15.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/surreal_orm", "src/surreal_sdk"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "Makefile", "/src"]
