[project]
name = "surreal-sdk"
version = "0.13.0"
description = "Custom Python SDK for SurrealDB with HTTP and WebSocket support. No dependency on official surrealdb package."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "Yannick Croteau", email = "yannick.croteau@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# CBOR support for binary protocol
cbor = [
    "cbor2>=5.6.0",
]

[project.urls]
Homepage = "https://github.com/EulogySnowfall/SurrealDB-ORM"
Documentation = "https://github.com/EulogySnowfall/SurrealDB-ORM"
Repository = "https://github.com/EulogySnowfall/SurrealDB-ORM.git"
Issues = "https://github.com/EulogySnowfall/SurrealDB-ORM/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["*.py", "py.typed", "README.md"]
