[project]
name = "surreal-sdk"
version = "0.21.1"
description = "Custom Python SDK for SurrealDB with HTTP and WebSocket support. No dependency on official surrealdb package."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "Yannick Croteau", email = "yannick.croteau@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.27.0",
    # aiohttp floor raised to 3.14.0 — patches CVE-2026-34513..34525 and others
    "aiohttp>=3.14.0",
    # Floor at 5.9.0 (avoid vulnerable 5.6–5.8); capped at <6 on the V2 LTS branch
    # since cbor2 6.0 may break SurrealDB 2.x custom tags
    "cbor2>=5.9.0,<6",
]

[project.urls]
Homepage = "https://github.com/EulogySnowfall/SurrealDB-ORM"
Documentation = "https://github.com/EulogySnowfall/SurrealDB-ORM"
Repository = "https://github.com/EulogySnowfall/SurrealDB-ORM.git"
Issues = "https://github.com/EulogySnowfall/SurrealDB-ORM/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["*.py", "py.typed", "README.md"]
